--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -1,48 +1,65 @@
+
+
 form {
-    background-color: #FF1F44;
-    color: white;
-    width: 300px;
-    height: 330px;
-    text-align: center;
-    font-family: 'Lato'; 
-    /* border-radius: 5%; */
+  margin: 15% auto;
+  background-color: #ff1f44;
+  color: white;
+  width: 300px;
+  height: 320px;
+  text-align: center;
+  font-family: "Lato";
+  /* border-radius: 5%; */
+}
+
+img {
+  width: 14px;
+  height: 14px;
+  margin: 0px auto -10px auto;
 }
 
 h1 {
-    margin: 25px auto -12px auto;
+  margin: 15px auto -12px auto;
 }
 
 p {
-    margin-top: 10px;
-    margin-bottom: 5px;
-    font-size: 10px;
-
+  margin-top: 10px;
+  margin-bottom: 5px;
+  font-size: 10px;
 }
 
-input, select, textarea, ::placeholder {
-    display: block;
-    width: 275px;
-    background-color: #d30e3ff8;
-    color: white;
-    margin: 0 auto 5px auto;
-    border: none;
-    padding: 6px 8px 10px 2px;
-    overflow-x: hidden;
-    font-size: 8px;
+input,
+select,
+textarea,
+::placeholder {
+  display: block;
+  width: 275px;
+  background-color: #d30e3ff8;
+  color: white;
+  font-family: "Lato";
+  margin: 0 auto 5px auto;
+  border: none;
+  padding: 6px 8px 10px 2px;
+  overflow-x: hidden;
+  font-size: 8px;
 }
 
 select {
-    align-content: center;
-    width: 285px;
+  align-content: center;
+  width: 285px;
+}
+
+textarea {
+  height: 60px;
+  padding-top: 0px;
 }
 
 button {
-    display: block;
-    margin: auto;
-    background-color: white;
-    color: #FF1F44;
-    width: 284px;
-    height: 40px;
-    border: none;
-    box-shadow: 0px 3px 0px rgba(0, 0, 0, 0.419);
+  display: block;
+  margin: auto;
+  background-color: white;
+  color: #ff1f44;
+  width: 284px;
+  height: 40px;
+  border: none;
+  box-shadow: 0px 3px 0px rgba(0, 0, 0, 0.419);
 }
